implemented explicit normals

--- a/src/dffimp.rc
+++ b/src/dffimp.rc
@@ -47,17 +47,19 @@ FONT 8, "Ms Shell Dlg"
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDD_DFFIMPORT DIALOG 0, 0, 125, 60
+IDD_DFFIMPORT DIALOG 0, 0, 125, 75
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "DFF importer"
 FONT 8, "Ms Shell Dlg"
 {
-    CONTROL         "", IDC_ANGLESPIN, "SpinnerControl", 0x50000000, 100, 25, 8, 10, 0x00000000
+    AUTOCHECKBOX    "Convert frame hierarchy", IDC_CONVAXIS, 10, 10, 91, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Auto smooth", IDC_AUTOSMOOTH, 10, 25, 55, 10, 0, WS_EX_LEFT
     CONTROL         "", IDC_ANGLE, "CustEdit", 0x50000000, 75, 25, 25, 10, 0x00000000
-    AUTOCHECKBOX    "Convert frame hierarchy", IDC_CONVAXIS, 10, 10, 91, 10, 0, WS_EX_LEFT
-    PUSHBUTTON      "Cancel", IDCANCEL, 65, 40, 50, 14, 0, WS_EX_LEFT
-    DEFPUSHBUTTON   "OK", IDOK, 10, 40, 50, 14, 0, WS_EX_LEFT
+    CONTROL         "", IDC_ANGLESPIN, "SpinnerControl", 0x50000000, 100, 25, 8, 10, 0x00000000
+    AUTOCHECKBOX    "Explicit normals", IDC_EXPLNORM, 10, 40, 91, 10, 0, WS_EX_LEFT
+
+    PUSHBUTTON      "Cancel", IDCANCEL, 65, 55, 50, 14, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDOK, 10, 55, 50, 14, 0, WS_EX_LEFT
 }
 
 
