--- a/src/dffimp.rc
+++ b/src/dffimp.rc
@@ -14,40 +14,46 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDD_DFFEXPORT DIALOG 0, 0, 208, 156
+IDD_DFFEXPORT DIALOG 0, 0, 208, 171
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "DFF Exporter"
 FONT 8, "Ms Shell Dlg"
 {
-    GROUPBOX        "Geometry", IDC_STATIC, 5, 5, 80, 60, 0, WS_EX_LEFT
+    GROUPBOX        "Geometry", IDC_STATIC, 5, 5, 80, 75, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Lighting Flag", IDC_LIGHTING, 15, 20, 56, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Vertex Normals", IDC_NORMALS, 15, 35, 63, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Vertex Prelights", IDC_PRELIT, 15, 50, 65, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Tristrip", IDC_TRISTRIP, 15, 65, 65, 10, 0, WS_EX_LEFT
+
     GROUPBOX        "Animation", IDC_STATIC, 95, 5, 105, 45, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Create HAnim Hierarchy", IDC_HANIM, 105, 20, 91, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Export Skinning", IDC_SKINNING, 105, 35, 65, 10, 0, WS_EX_LEFT
-    GROUPBOX        "Export Space", IDC_STATIC, 5, 70, 80, 30, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "World Space", IDC_WORLDSPACE, 15, 85, 57, 8, 0, WS_EX_LEFT
+
+    GROUPBOX        "Export Space", IDC_STATIC, 5, 85, 80, 30, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "World Space", IDC_WORLDSPACE, 15, 100, 57, 8, 0, WS_EX_LEFT
+
     GROUPBOX        "R* Extensions", IDC_STATIC, 95, 55, 105, 45, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Node names", IDC_RS_NODENAME, 105, 70, 56, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Extra Vertex Colors", IDC_RS_EXTRACOLORS, 105, 85, 75, 10, 0, WS_EX_LEFT
-    GROUPBOX        "File Version", IDC_STATIC, 5, 105, 195, 25, 0, WS_EX_LEFT
-    LTEXT           "3", IDC_STATIC, 15, 116, 10, 10, SS_LEFT, WS_EX_LEFT
-    CONTROL         "", IDC_V1, "CustEdit", 0x50000000, 25, 115, 15, 10, 0x00000000
-    CONTROL         "", IDC_V1SPIN, "SpinnerControl", 0x50000000, 40, 115, 8, 10, 0x00000000
-    CONTROL         "", IDC_V2, "CustEdit", 0x50000000, 50, 115, 15, 10, 0x00000000
-    CONTROL         "", IDC_V2SPIN, "SpinnerControl", 0x50000000, 65, 115, 8, 10, 0x00000000
-    CONTROL         "", IDC_V3, "CustEdit", 0x50000000, 75, 115, 15, 10, 0x00000000
-    CONTROL         "", IDC_V3SPIN, "SpinnerControl", 0x50000000, 90, 115, 8, 10, 0x00000000
-    DEFPUSHBUTTON   "OK", IDOK, 95, 135, 50, 14, 0, WS_EX_LEFT
-    PUSHBUTTON      "Cancel", IDCANCEL, 150, 135, 50, 14, 0, WS_EX_LEFT
-    COMBOBOX        IDC_GAME, 100, 113, 95, 100, WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
+
+    GROUPBOX        "File Version", IDC_STATIC, 5, 120, 195, 25, 0, WS_EX_LEFT
+    LTEXT           "3", IDC_STATIC, 15, 131, 10, 10, SS_LEFT, WS_EX_LEFT
+    CONTROL         "", IDC_V1, "CustEdit", 0x50000000, 25, 130, 15, 10, 0x00000000
+    CONTROL         "", IDC_V1SPIN, "SpinnerControl", 0x50000000, 40, 130, 8, 10, 0x00000000
+    CONTROL         "", IDC_V2, "CustEdit", 0x50000000, 50, 130, 15, 10, 0x00000000
+    CONTROL         "", IDC_V2SPIN, "SpinnerControl", 0x50000000, 65, 130, 8, 10, 0x00000000
+    CONTROL         "", IDC_V3, "CustEdit", 0x50000000, 75, 130, 15, 10, 0x00000000
+    CONTROL         "", IDC_V3SPIN, "SpinnerControl", 0x50000000, 90, 130, 8, 10, 0x00000000
+
+    DEFPUSHBUTTON   "OK", IDOK, 95, 150, 50, 14, 0, WS_EX_LEFT
+    PUSHBUTTON      "Cancel", IDCANCEL, 150, 150, 50, 14, 0, WS_EX_LEFT
+    COMBOBOX        IDC_GAME, 100, 128, 95, 100, WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
 }
 
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDD_DFFIMPORT DIALOG 0, 0, 125, 75
+IDD_DFFIMPORT DIALOG 0, 0, 125, 105
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "DFF importer"
 FONT 8, "Ms Shell Dlg"
@@ -57,9 +63,11 @@ FONT 8, "Ms Shell Dlg"
     CONTROL         "", IDC_ANGLE, "CustEdit", 0x50000000, 75, 25, 25, 10, 0x00000000
     CONTROL         "", IDC_ANGLESPIN, "SpinnerControl", 0x50000000, 100, 25, 8, 10, 0x00000000
     AUTOCHECKBOX    "Explicit normals", IDC_EXPLNORM, 10, 40, 91, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Import as Standard Materials", IDC_STDMAT, 10, 55, 110, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Take Material ID from Mesh", IDC_FIXKAM, 10, 70, 110, 10, 0, WS_EX_LEFT
 
-    PUSHBUTTON      "Cancel", IDCANCEL, 65, 55, 50, 14, 0, WS_EX_LEFT
-    DEFPUSHBUTTON   "OK", IDOK, 10, 55, 50, 14, 0, WS_EX_LEFT
+    PUSHBUTTON      "Cancel", IDCANCEL, 65, 85, 50, 14, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDOK, 10, 85, 50, 14, 0, WS_EX_LEFT
 }
 
 
