--- a/src/dffimp.rc
+++ b/src/dffimp.rc
@@ -14,7 +14,7 @@
 // Dialog resources
 //
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-IDD_DFFEXPORT DIALOG 0, 0, 208, 171
+IDD_DFFEXPORT DIALOG 0, 0, 208, 206
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "DFF Exporter"
 FONT 8, "Ms Shell Dlg"
@@ -25,29 +25,53 @@ FONT 8, "Ms Shell Dlg"
     AUTOCHECKBOX    "Vertex Prelights", IDC_PRELIT, 15, 50, 65, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Tristrip", IDC_TRISTRIP, 15, 65, 65, 10, 0, WS_EX_LEFT
 
+    GROUPBOX        "Export Space", IDC_STATIC, 5, 85, 80, 30, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "World Space", IDC_WORLDSPACE, 15, 100, 57, 8, 0, WS_EX_LEFT
+
     GROUPBOX        "Animation", IDC_STATIC, 95, 5, 105, 45, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Create HAnim Hierarchy", IDC_HANIM, 105, 20, 91, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Export Skinning", IDC_SKINNING, 105, 35, 65, 10, 0, WS_EX_LEFT
 
-    GROUPBOX        "Export Space", IDC_STATIC, 5, 85, 80, 30, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "World Space", IDC_WORLDSPACE, 15, 100, 57, 8, 0, WS_EX_LEFT
+    GROUPBOX        "User data", IDC_STATIC, 95, 55, 105, 45, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "User data", IDC_USERDATA, 105, 70, 60, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Object names", IDC_OBJNAMES, 105, 85, 60, 8, 0, WS_EX_LEFT
+    PUSHBUTTON      "More", IDC_NAMES_MORE, 170, 83, 25, 12, 0, WS_EX_LEFT
 
-    GROUPBOX        "R* Extensions", IDC_STATIC, 95, 55, 105, 45, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "Node names", IDC_RS_NODENAME, 105, 70, 56, 10, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "Extra Vertex Colors", IDC_RS_EXTRACOLORS, 105, 85, 75, 10, 0, WS_EX_LEFT
+    GROUPBOX        "R* Extensions", IDC_STATIC, 95, 105, 105, 45, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Node names", IDC_RS_NODENAME, 105, 120, 56, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Extra Vertex Colors", IDC_RS_EXTRACOLORS, 105, 135, 75, 10, 0, WS_EX_LEFT
 
-    GROUPBOX        "File Version", IDC_STATIC, 5, 120, 195, 25, 0, WS_EX_LEFT
-    LTEXT           "3", IDC_STATIC, 15, 131, 10, 10, SS_LEFT, WS_EX_LEFT
-    CONTROL         "", IDC_V1, "CustEdit", 0x50000000, 25, 130, 15, 10, 0x00000000
-    CONTROL         "", IDC_V1SPIN, "SpinnerControl", 0x50000000, 40, 130, 8, 10, 0x00000000
-    CONTROL         "", IDC_V2, "CustEdit", 0x50000000, 50, 130, 15, 10, 0x00000000
-    CONTROL         "", IDC_V2SPIN, "SpinnerControl", 0x50000000, 65, 130, 8, 10, 0x00000000
-    CONTROL         "", IDC_V3, "CustEdit", 0x50000000, 75, 130, 15, 10, 0x00000000
-    CONTROL         "", IDC_V3SPIN, "SpinnerControl", 0x50000000, 90, 130, 8, 10, 0x00000000
+    GROUPBOX        "File Version", IDC_STATIC, 5, 155, 195, 25, 0, WS_EX_LEFT
+    LTEXT           "3", IDC_STATIC, 15, 166, 10, 10, SS_LEFT, WS_EX_LEFT
+    CONTROL         "", IDC_V1, "CustEdit", 0x50000000, 25, 165, 15, 10, 0x00000000
+    CONTROL         "", IDC_V1SPIN, "SpinnerControl", 0x50000000, 40, 165, 8, 10, 0x00000000
+    CONTROL         "", IDC_V2, "CustEdit", 0x50000000, 50, 165, 15, 10, 0x00000000
+    CONTROL         "", IDC_V2SPIN, "SpinnerControl", 0x50000000, 65, 165, 8, 10, 0x00000000
+    CONTROL         "", IDC_V3, "CustEdit", 0x50000000, 75, 165, 15, 10, 0x00000000
+    CONTROL         "", IDC_V3SPIN, "SpinnerControl", 0x50000000, 90, 165, 8, 10, 0x00000000
 
-    DEFPUSHBUTTON   "OK", IDOK, 95, 150, 50, 14, 0, WS_EX_LEFT
-    PUSHBUTTON      "Cancel", IDCANCEL, 150, 150, 50, 14, 0, WS_EX_LEFT
-    COMBOBOX        IDC_GAME, 100, 128, 95, 100, WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDOK, 95, 185, 50, 14, 0, WS_EX_LEFT
+    PUSHBUTTON      "Cancel", IDCANCEL, 150, 185, 50, 14, 0, WS_EX_LEFT
+    COMBOBOX        IDC_GAME, 100, 163, 95, 100, WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS, WS_EX_LEFT
+}
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDD_NAMEOPT DIALOG 0, 0, 125, 90
+STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
+CAPTION "Object names ..."
+FONT 8, "Ms Shell Dlg"
+{
+    LTEXT           "Entry name", IDC_STATIC, 10, 10, 40, 10, SS_LEFT, WS_EX_LEFT
+    CONTROL         "", IDC_NAME_ENTRY, "CustEdit", 0x50000000, 65, 10, 50, 10, 0x00000000
+
+    AUTOCHECKBOX    "Geometry", IDC_NAME_GEO, 10, 25, 50, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Frame", IDC_NAME_FRM, 10, 40, 50, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Camera", IDC_NAME_CAM, 10, 55, 50, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Light", IDC_NAME_LGT, 70, 25, 50, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Material", IDC_NAME_MAT, 70, 40, 50, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Texture", IDC_NAME_TEX, 70, 55, 50, 10, 0, WS_EX_LEFT
+
+    DEFPUSHBUTTON   "OK", IDOK, 65, 70, 50, 14, 0, WS_EX_LEFT
 }
 
 
@@ -55,7 +79,7 @@ FONT 8, "Ms Shell Dlg"
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 IDD_DFFIMPORT DIALOG 0, 0, 125, 105
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
-CAPTION "DFF importer"
+CAPTION "DFF Importer"
 FONT 8, "Ms Shell Dlg"
 {
     AUTOCHECKBOX    "Convert frame hierarchy", IDC_CONVAXIS, 10, 10, 91, 10, 0, WS_EX_LEFT
